# versionner-project-sample

./: .versionner.rc  README.md  pyproject.toml
sample_lib/: version.py
tests/: test_version.py
